--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,29 @@
 @import "tailwindcss";
 
 :root {
-  --background: var(--color-stone-100);
-  --foreground: var(--color-stone-500);
+  --background: var(--color-neutral-800);
+  --foreground: var(--color-black);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-display: var(--font-display);
-  --font-serif: var(--font-serif);
-  --font-sans: var(--font-sans);
-  --font-mono: var(--font-mono);
+  --font-serif: DM Serif Display, serif;
+  --font-sans: InterVariable, sans-serif;
+  --font-mono: JetBrains Mono, monospace;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: var(--color-stone-500);
-    --foreground: var(--color-stone-100);
-  }
+/*@media (prefers-color-scheme: dark) {*/
+/*  :root {*/
+/*    --background: var(--color-stone-500);*/
+/*    --foreground: var(--color-stone-100);*/
+/*  }*/
+/*}*/
+
+html {
+  --scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
